Keep the helper projection in declaration order
The projection is derived from ENTRIES, which holds declaration order,
but Map.copyOf makes no promise about iteration order — the one thing
the old LinkedHashMap said. Wrapped unmodifiable instead, so the order
diagnostics and walks see stays the order the library declares.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QoT6Xu7Tr5fdQ9pByo2oAK